--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -34,7 +34,7 @@
                         </div>
 
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Settings">
-                            <a style="cursor: pointer; text-decoration: none;" href="{{ path('zectranet_show_header_forum_settings', {'project_id': forum.id}) }}">
+                            <a style="cursor: pointer; text-decoration: none;" href="#">
                                 <i class="fa text-primary fa-fw fa-gear fa-2x"></i>
                             </a>
                         </div>
