--- a/src/ZectranetBundle/Resources/views/QnAForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAForum.html.twig
@@ -25,7 +25,7 @@
                         </div>
 
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Settings">
-                            <a style="cursor: pointer; text-decoration: none;" href="#">
+                            <a href="{{ path('zectranet_QnA_settings', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none;">
                                 <i class="fa text-primary fa-fw fa-gear fa-2x"></i>
                             </a>
                         </div>
