--- a/src/ZectranetBundle/Resources/views/QnASettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnASettings.html.twig
@@ -37,9 +37,7 @@
                 <button class="btn btn-default" style="width: 100%;">Send invite</button>
             </div>
 
-            <div class="col-md-2"></div>
-
-            <div class="col-md-6">
+            <div class="col-md-6 col-md-offset-2">
                 <div class="text-muted">Project users:</div>
                 <div style="min-height: 250px; border: 1px solid #eee;"></div>
                 <button class="btn btn-default" style="width: 100%;">Delete user</button>
