--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -81,14 +81,14 @@
     </div>
 
     {% if thread.posts | length == 0 %}
-        <div class="thread" style="margin: 20px 0 0 100px; font-size: 1.3em; color: #009beb">
+        <div class="thread posts" style="font-size: 1.3em; color: #009beb">
             Answers will be displayed here
         </div>
     {% endif %}
 
     {% for post in thread.posts %}
 
-        <div style="margin: 20px 0 20px 100px;">
+        <div class="posts">
             <div class="row">
                 <div class="col-md-12">
 
@@ -120,7 +120,7 @@
 
     {% endfor %}
 
-    <form action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post" style="margin: 20px 15px 20px 100px;">
+    <form class="posts" action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
         <div class="input-group">
             <textarea name="message" class="form-control" rows="3"></textarea>
             <div class="input-group-addon" style="padding: 0;">
