--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -55,7 +55,12 @@
                 </li>
             </ul>
         </div>
-        <div class="col-md-4 col-md-offset-4">
+
+        <div class="col-md-4">
+            <a href="{{ path('zectranet_office_profile_page', {'office_id' : office.id}) }}"></a>
+        </div>
+
+        <div class="col-md-4">
             <ul class="list-group"  style="box-shadow: 2px 3px 6px 0 darkkhaki;">
                 <li class="list-group-item active" style="background:#ddedf4; color:#606060;">
                     <b>Market Place</b>
