--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -21,10 +21,10 @@
 
     <div class="page-header">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-9">
                 <span style="font-size: 22px; font-family: 'PT Sans Narrow', sans-serif;">{{ thread.title }}</span>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
                     <div class="pull-right">
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Delete This Project">
@@ -38,6 +38,12 @@
                                 <i class="fa text-primary fa-fw fa-gear fa-2x"></i>
                             </a>
                         </div>
+
+                        <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Profile">
+                            <a href="{{ path('zectranet_project_profile_page', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none; font-size: 1.3em;">
+                                Profile
+                            </a>
+                        </div>
                     </div>
                 {% endif %}
             </div>
@@ -48,15 +54,17 @@
         <div class="col-md-12">
 
             <div class="post">
-                <div class="post-message">
-                    {{ thread.message }}
+                <div style="display: inline-block; width: 75%;">
+                    <div class="post-message">
+                        {{ thread.message }}
+                    </div>
+
+                    <div class="right-thread-content thread-keywords" style="margin-top: 20px;">
+                        <span style="color: #0c65a5;">{{ thread.keywords }}</span>
+                    </div>
                 </div>
 
-                <div class="right-thread-content thread-keywords" style="margin-top: 20px;">
-                    <span style="color: #0c65a5;">{{ thread.keywords }}</span>
-                </div>
-
-                <div class="pull-right informer text-muted">
+                <div class="informer text-muted" style="display: inline-block; vertical-align: top;">
                     <div>asked {{ thread.date | date('Y-m-d H:i:s') }}</div>
 
                     <div class="informer-user">
@@ -70,7 +78,6 @@
                     </div>
                 </div>
 
-                <div class="clearfix"></div>
             </div>
 
         </div>
@@ -93,11 +100,13 @@
                 <div class="col-md-12">
 
                     <div class="post">
-                        <div class="post-message">
-                            {{ post.message }}
+                        <div style="display: inline-block; width: 75%;">
+                            <div class="post-message" style="border-bottom: none; white-space: pre-line;">
+                                {{ post.message }}
+                            </div>
                         </div>
 
-                        <div class="pull-right informer text-muted">
+                        <div class="informer text-muted" style="display: inline-block; vertical-align: top;">
                             <div>answer {{ post.posted | date('Y-m-d H:i:s') }}</div>
 
                             <div class="informer-user">
@@ -110,8 +119,6 @@
                                 </a>
                             </div>
                         </div>
-
-                        <div class="clearfix"></div>
                     </div>
 
                 </div>
@@ -120,17 +127,18 @@
 
     {% endfor %}
 
-    <form class="posts" action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
-        <div class="input-group">
-            <textarea name="message" class="form-control" rows="3"></textarea>
-            <div class="input-group-addon" style="padding: 0;">
-                <button type="submit" class="btn btn-default btn-primary" style="width: 72px; height: 72px;">
-                    Answer
-                </button>
+    <div class="col-md-12">
+        <form class="posts" action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
+            <div class="input-group">
+                <textarea name="message" class="form-control" rows="3"></textarea>
+                <div class="input-group-addon" style="padding: 0;">
+                    <button type="submit" class="btn btn-default btn-primary" style="width: 72px; height: 72px;">
+                        Answer
+                    </button>
+                </div>
             </div>
-        </div>
-    </form>
-
+        </form>
+    </div>
 
 
     <div class="modal fade" id="delete_QnA_project" tabindex="-1" role="dialog" aria-hidden="true">
