--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -59,7 +59,7 @@
                         {{ thread.message }}
                     </div>
 
-                    <div class="right-thread-content thread-keywords" style="margin-top: 20px;">
+                    <div class="right-thread-content thread-keywords" style="margin: 15px 0;">
                         <span style="color: #0c65a5;">{{ thread.keywords }}</span>
                     </div>
                 </div>
