--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -101,7 +101,7 @@
 
                     <div class="post">
                         <div style="display: inline-block; width: 75%;">
-                            <div class="post-message" style="border-bottom: none; white-space: pre-line;">
+                            <div class="post-message" style="border-bottom: none;">
                                 {{ post.message }}
                             </div>
                         </div>
