--- a/src/ZectranetBundle/Resources/views/QnAForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAForum.html.twig
@@ -30,11 +30,11 @@
                             </a>
                         </div>
 
-                        <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Profile">
+                        {#<div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Profile">
                             <a href="{{ path('zectranet_project_profile_page', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none; font-size: 1.3em;">
                                 Profile
                             </a>
-                        </div>
+                        </div>#}
                     </div>
                 {% endif %}
             </div>
