--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -39,11 +39,11 @@
                             </a>
                         </div>
 
-                        <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Profile">
+                        {#<div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Profile">
                             <a href="{{ path('zectranet_project_profile_page', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none; font-size: 1.3em;">
                                 Profile
                             </a>
-                        </div>
+                        </div>#}
                     </div>
                 {% endif %}
             </div>
@@ -54,7 +54,7 @@
         <div class="col-md-12">
 
             <div class="post">
-                <div style="display: inline-block; width: 75%;">
+                <div class="container-post-message" style="display: inline-block;">
                     <div class="post-message">
                         {{ thread.message }}
                     </div>
@@ -84,7 +84,14 @@
     </div>
 
     <div class="page-header">
-        <span style="font-size: 22px; font-family: 'PT Sans Narrow', sans-serif;">{{ thread.posts | length }} Answers</span>
+        <span style="font-size: 22px; font-family: 'PT Sans Narrow', sans-serif;">
+            {{ thread.posts | length }}
+            {% if thread.posts | length == 1 %}
+                Answer
+            {% else %}
+                Answers
+            {% endif %}
+        </span>
     </div>
 
     {% if thread.posts | length == 0 %}
@@ -100,7 +107,7 @@
                 <div class="col-md-12">
 
                     <div class="post">
-                        <div style="display: inline-block; width: 75%;">
+                        <div class="container-post-message" style="display: inline-block;">
                             <div class="post-message" style="border-bottom: none;">
                                 {{ post.message }}
                             </div>
