--- a/src/ZectranetBundle/Resources/views/QnAForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAForum.html.twig
@@ -56,7 +56,7 @@
             </div>
         {% endif %}
 
-        {% for thread in forum.threads %}
+        {% for i, thread in forum.threads %}
 
             <div class="thread">
                 <div class="thread-content left-thread">
@@ -78,7 +78,9 @@
                     </a>
 
                     <div class="right-thread-content thread-keywords">
-                        <span>{{ thread.keywords }}</span>
+                        {% for j in 0..keywords[i].keys | length - 1 %}
+                            <span style="margin-left: 3px;">{{ keywords[i].keys[j] }}</span>
+                        {% endfor %}
 
                         <div class="pull-right text-muted" style="margin-top: 8px;">
                             asked
