--- a/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
@@ -20,36 +20,36 @@
         <div ng-init="getProjectSettingInfo();">
             <div class="row">
                 <div class="col-md-3 " style="margin-top: 15px;">
-                    <ul class="list-group" style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 250px; margin-bottom: 0;">
+                    <ul class="list-group" style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 250px;overflow-y: auto; margin-bottom: 0;">
                         <li class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
                             HO Contacts
                         </li>
                         <li class="list-group-item" style="cursor: pointer;"
                             ng-repeat="HO_Contact in HO_Contacts"
                             ng-class="{'contact-list-active':HO_Contact.checked}"
-                            ng-click="contactChecked($index, HO_Contacts);" >
+                            ng-click="contactChecked(1,$index, HO_Contacts);" >
                             [[ HO_Contact.username ]]
                         </li>
                     </ul>
-                    <a class="btn btn-default btn-success" data-toggle="modal"
+                    <a ng-init="testClickableButton(1,HO_Contacts);" ng-if="HO_Contacts_test"  class="btn btn-default btn-success" data-toggle="modal"
                        data-target="#send_request_by_HO_contacts" style="width: 100%;">
                         Send Request
                     </a>
                 </div>
 
                 <div class="col-md-3 " style="margin-top: 15px;">
-                    <ul class="list-group"  style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 250px; margin-bottom: 0;">
+                    <ul class="list-group"  style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 250px;overflow-y: auto; margin-bottom: 0;">
                         <li class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
                             All Contacts
                         </li>
                         <li class="list-group-item" style="cursor: pointer;"
                             ng-repeat="contact in All_Contacts"
                             ng-class="{'contact-list-active':contact.checked}"
-                            ng-click="contactChecked($index,All_Contacts);">
+                            ng-click="contactChecked(2,$index,All_Contacts);">
                             [[ contact.username ]]
                         </li>
                     </ul>
-                    <a class="btn btn-default btn-success" data-toggle="modal"
+                    <a ng-init="testClickableButton(2,All_Contacts);" ng-if="All_Contacts_test" class="btn btn-default btn-success" data-toggle="modal"
                        data-target="#send_request_by_All_contacts" style="width: 100%;">
                         Send Request
                     </a>
@@ -60,7 +60,7 @@
                         <div class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
                             Project Team
                         </div>
-                        <div class="list-group-item" style="height: 240px;">
+                        <div class="list-group-item" style="height: 240px;overflow-y: auto;">
                             <table class="table">
                                 <thead class="table-striped">
                                 <tr>
@@ -75,7 +75,7 @@
                                         [[ request.user.username ]]
                                     </td>
                                     <td>
-                                        [[ request.status.id ]]
+                                       <span class="label" style="background-color: [[ request.status.color ]]">[[ request.status.label ]]</span>
                                     </td>
                                     <td>
                                         #
